<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <item
        android:id="@+id/action_add"
        android:title="@string/adicionar"
        android:icon="@drawable/ic_adicionar_white"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/action_buscar"
        android:title="@string/action_buscar"
        android:icon="@drawable/lupa_white"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_atualizar"
        android:title="@string/action_atualizar"
        android:icon="@drawable/outline_refresh_white_24dp"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/action_confg"
        android:title="@string/action_config"
        android:icon="@drawable/ic_configuracoes_white"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_sair"
        android:title="@string/sair"
        app:showAsAction="never"
        />


</menu>