<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:context=".CadastrarActivity"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Essa será a tela de cadastro"
        android:textSize="60dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_01"
        android:textSize="25dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite aqui"/>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_02"
        android:textSize="25dp" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite aqui"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label1"
        android:textSize="25dp" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite aqui"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CONFIRMAR" />


</LinearLayout>